--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
     <h2>Projects</h2>
 
     <div class="project-card">
+      <h3>AI Career Intelligence Assistant</h3>
+      <p>
+        AI Career Intelligence Assistant is an LLM-powered application designed to help job seekers evaluate their resumes against job descriptions using semantic understanding instead of keyword matching. The system analyzes resumes, identifies skill gaps, calculates match scores, and provides personalized career improvement guidance using Retrieval-Augmented Generation (RAG)
+      </p>
+      <p> The application focuses on accuracy, explainability, and real-world hiring alignment by combining embeddings, vector databases, and large language models to simulate how recruiters evaluate candidates.</p>
+      <ul>
+        <li>Designed and implemented an end-to-end RAG pipeline for resume–job description matching
+            using embeddings and FAISS, improving semantic relevance of AI responses by 60–70% compared
+            to keyword-based approaches.</li>
+        <li>Built a deterministic skill extraction and matching engine to compute accurate skill-match
+            percentages, eliminating LLM-hallucinated scores and ensuring 100% consistency in metric-based
+            outputs.</li>
+        <li>Developed a session-aware, multi-user backend with FastAPI, Redis, and X-Session-ID headers,
+            enabling concurrent document ingestion and analysis without cross-user data leakage.</li>
+        <li>Optimized LLM usage via Mock/Real execution modes and controlled prompting, reducing
+            development-time API costs by 80% while maintaining production-ready behavior</li>
+        <li>Delivered an interactive AI product using Streamlit, integrating chat-based RAG queries, skill
+            gap analysis, resume rewriting, and ATS keyword extraction, reducing user task completion time
+            by 40%</li>
+        </ul>
+      <!-- Add your GitHub link later if you want -->
+      <a href="https://github.com/sivakumarbe/AI-career-intelligence-assistant.git" target="_blank" class="btn small">View on GitHub</a>
+    </div>
+
+
+    <div class="project-card">
       <h3>SwastAid – Smart Health Assistant</h3>
       <p>
         SwastAid is a Flutter-based mobile healthcare assistant designed to help diabetic patients manage daily medication routines and understand blood sugar reports using OCR technology. get meal suggestion based on the glucose values to recover fast. get pill reminders with text-to-speech notifications, ensuring timely medication intake.
@@ -210,7 +236,7 @@
       <h3>Artificail Intelligence programmer</h3>
       <p class="issuer">Issued by: Cultus</p>
       <p class="date">Year: 2025</p>
-      <a href="#" class="cert-btn" target="_blank">View Certificate</a>
+      <a href="assets/certificates/AI_programer.pdf" class="cert-btn" target="_blank">View Certificate</a>
     </div>
 
     <div class="certificate-card elevate floating">
